# ChangeLog for kde-misc/quadkonsole
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/quadkonsole/ChangeLog,v 1.4 2008/04/28 15:59:38 phreak Exp $

  28 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Remove Wulf C. Krueger (philantrop) from metadata.xml (as per #168573).

  18 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  quadkonsole-2.0.2.ebuild:
  Update kde-base/* dependencies so that KDE 4 doesn't satisfy it. bug 206571.

  18 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org>
  quadkonsole-2.0.2.ebuild:
  Moved need-kde to its correct position after (R)DEPEND.

*quadkonsole-2.0.2 (17 Jun 2007)

  17 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> +metadata.xml,
  +quadkonsole-2.0.2.ebuild:
  Initial ebuild, submitted by TheOmega and Hanni Ali on bug 157500. Thanks to
  both of you!
